--- a/menu.html
+++ b/menu.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu responsivel</title>
     <script src="https://kit.fontawesome.com/ea57f83b3b.js" crossorigin="anonymous"></script>
+    <script src="css/bootstrap.min.css"></script>
     <link rel="stylesheet" href="css/menu.css">
 </head>
 <body>
@@ -58,5 +59,7 @@
             </tr>
         </table>
     </main>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
